don't nest anchor tags with definition inside a hyperlink

--- a/index.html
+++ b/index.html
@@ -958,7 +958,8 @@ needs to collect extra data from its users in order to protect those or other us
 must take extra technical and legal measures to ensure that this data can't be then used
 for other purposes, like to grow the service.</span></p>
 
-This is a special case of the <a href="#no-secondary-use">more general principle that data should not be used for more [=purposes=] than those specified when the data was collected</a>.
+This is a special case of the <a href="#no-secondary-use">more general principle that data should not be used for more
+purposes than those specified when the data was collected</a>.
 
 Services sometimes use people's data in order to protect those or other people.
 A service that does this should explain what data it's
