--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@ submit to decisions based on that kind of automated recognition.
 withdraw consent, and restrict use</dfn> of data about oneself.
 
 [=People=] may change their decisions about [=consent=] or may object to subsequent uses of data about
-themselves. Data rights mean that a person has ongoing control, not just a choice at the time of collection.
+themselves. Data rights mean that a person needs to have ongoing control, not just a choice at the time of collection.
 
 The OECD Privacy Principles [[OECD-Guidelines]], [[Records-Computers-Rights]], and the [[GDPR]],
 among other places, describe many of the rights [=people=] have as data subjects. These participatory
