--- a/index.html
+++ b/index.html
@@ -1381,20 +1381,20 @@ do support self-determination and help improve accountability. Such rights inclu
 
 This right includes both being able to review what information has been collected or inferred about
 oneself and being able to discover what [=actors=] have collected information about oneself. As a
-result, databases cannot be kept secret and data collected about [=people=] needs to be meaningfully
+result, databases containing information about [=people=] cannot be kept secret, and data collected about people needs to be meaningfully
 discoverable by those people.
 
 * The <dfn data-export="" data-lt="right to erase">right to erase</dfn> [=data=] about oneself.
 
-The right to erase applies whether or not terminating use of a service altogether, though what
-[=data=] can be erased may differ between those two cases. On the Web, [=people=] may wish to erase
-data on their device, on a server, or both, and the distinctions may not always be clear.
+A [=person=] has a right to erase information about themselves whether or not they are terminating use of a service altogether, though what
+[=data=] can be erased may differ between those two cases. On the Web, a [=person=] may wish to erase
+data on their device, on a server, or both, and the data's location may not always be clear to the person.
 
 * The <dfn data-export="" data-lt="right to portability" data-local-lt="portability">right to
 port</dfn> [=data=], including data one has stored with another [=actor=], so it can easily be reused or
 transferred elsewhere.
 
-Portability is needed to realize the ability for [=people=] to make choices about services with
+Portability is needed to support a [=person=]'s ability to make choices about services with
 different data practices. Standards for interoperability are essential for effective re-use.
 
 * The <dfn data-export="">right to correct</dfn> [=data=] about oneself, to ensure that one's
@@ -1417,11 +1417,11 @@ submit to decisions based on that kind of automated recognition.
   data-lt="right to object|right to withdraw consent|right to restrict use">right to object,
 withdraw consent, and restrict use</dfn> of data about oneself.
 
-[=People=] may change their decisions about consent or may object to subsequent uses of data about
-themselves. Retaining rights requires ongoing control, not just at the time of collection.
+[=People=] may change their decisions about [=consent=] or may object to subsequent uses of data about
+themselves. Data rights mean that a person needs to have ongoing control, not just a choice at the time of collection.
 
 The OECD Privacy Principles [[OECD-Guidelines]], [[Records-Computers-Rights]], and the [[GDPR]],
-among other places, include many of the rights [=people=] have as data subjects. These participatory
+among other places, describe many of the rights [=people=] have as data subjects. These participatory
 rights by people over data about themselves are inherent to [=autonomy=].
 
 ## De-identified Data {#deidentified-data}
