--- a/index.html
+++ b/index.html
@@ -1749,8 +1749,8 @@ describing the limited <a data-link-type="dfn|abstract-op" href="#dfn-purpose" c
 <p>Note that <a data-link-type="dfn|abstract-op" href="#dfn-controlled-de-identified-data" class="internalDFN" id="ref-for-dfn-controlled-de-identified-data-5">controlled de-identified data</a>, on its own, is not sufficient to make
 <a data-link-type="dfn|abstract-op" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-24">data processing</a> <a data-link-type="dfn|abstract-op" href="#dfn-appropriately" class="internalDFN" id="ref-for-dfn-appropriately-11">appropriate</a>.</p>
 </section><section id="collective-privacy-0"><div class="header-wrapper"><h3 id="collective-privacy"><bdi class="secno">2.7 </bdi>Collective Privacy</h3><a class="self-link" href="#collective-privacy" aria-label="Permalink for Section 2.7"></a></div><div class="practice principle" data-audiences="websites user-agents"><a class="marker self-link" href="#principle-collective-privacy"><bdi lang="en">Principle</bdi></a>: <span class="practicelab" id="principle-collective-privacy">
-    Groups and various forms of institutions should best protect and support autonomy by making
-    decisions collectively rather than individually to either prevent or enable data
+    Groups and institutions should support autonomy by making
+    decisions collectively to either prevent or enable data
     sharing, and to set defaults for data processing rules.
   </span>
 
@@ -2525,8 +2525,8 @@ interests.</span></li><li><a class="marker self-link" href="#bp-new-web-apis-mus
   </span></li><li><a class="marker self-link" href="#de-identify-data"><bdi lang="en">Principle</bdi></a>: <span class="practicelab">
     Whenever possible, processors should work with <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-57">data</a> that has been <a data-link-type="dfn|abstract-op" href="#dfn-de-identified" class="internalDFN" id="ref-for-dfn-de-identified-5">de-identified</a>.
   </span></li><li><a class="marker self-link" href="#principle-collective-privacy"><bdi lang="en">Principle</bdi></a>: <span class="practicelab">
-    Groups and various forms of institutions should best protect and support autonomy by making
-    decisions collectively rather than individually to either prevent or enable data
+    Groups and institutions should support autonomy by making
+    decisions collectively to either prevent or enable data
     sharing, and to set defaults for data processing rules.
   </span></li><li><a class="marker self-link" href="#principle-owned-devices-disclose-surveillance"><bdi lang="en">Principle</bdi></a>: <span class="practicelab">
 <a data-link-type="dfn|abstract-op" data-type="dfn" href="https://infra.spec.whatwg.org/#user-agent">User agents</a> must not help a device <a data-link-type="dfn|abstract-op" href="#dfn-administrator" class="internalDFN" id="ref-for-dfn-administrator-10">administrator</a> surveil the people
