Soften the recommendation for collective decision-making

--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,7 @@ Note that [=controlled de-identified data=], on its own, is not sufficient to ma
 
 Privacy principles are often defined in terms of extending rights to individuals. However, there are
 cases in which deciding which principles apply is best done collectively, on behalf of a group.
-Collective decision-making is likely preferable:
+Collective decision-making should be considered:
 
 <ul>
   <li>
