--- a/index.html
+++ b/index.html
@@ -1528,7 +1528,7 @@ Collective decision-making should be considered:
   </li>
 
   <li>
-    When the [=data processing=] is justified or unjustified at a societal level,
+    When the [=data processing=] is unjust at a societal level even if an individual remains anonymous ([[?Relational-Governance]]).
     even accounting for individual disagreements ([[?Relational-Governance]]).
   </li>
 </ul>
