--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@ interest, and it's critical that web platform technologies do not exacerbate
 the risks inherant in this situation.
 
 [=User agents=] should balance a benevolent [=guardian=]'s need to protect
-their [=ward=] from dangers, against a [=wards=]' need to protect themselves
+their [=ward=] from dangers, against a [=ward=]'s need to protect themself
 if they have a malicious [=guardian=].
 
 [=User agents=] can protect vulnerable [=wards=] by complying with the principles in
