Respec can't autolink with "'s".

--- a/index.html
+++ b/index.html
@@ -1631,7 +1631,7 @@ Computing devices have <dfn data-lt="administrator">administrators</dfn>, who
 have privileged access to the devices in order to install and configure the
 programs that run on them. The <dfn data-lt="device owner">owner</dfn> of a
 device often authorizes the [=administrators=], but there are also ways to get
-administrator access without the [=device owner's=] knowledge. Some [=user
+administrator access without the [=device owner=]'s knowledge. Some [=user
 agents=] can also assign an [=administrator=] based on the account that's logged
 into the [=user agent=].
 
