--- a/index.html
+++ b/index.html
@@ -1630,10 +1630,9 @@ See [[[#guardians]]] for more detail on how this principle applies to vulnerable
 Computing devices have <dfn data-lt="administrator">administrators</dfn>, who
 have privileged access to the devices in order to install and configure the
 programs that run on them. The <dfn data-lt="device owner">owner</dfn> of a
-device often authorizes the [=administrators=], but there are also ways to get
-administrator access without the [=device owner=]'s knowledge. Some [=user
-agents=] can also assign an [=administrator=] based on the account that's logged
-into the [=user agent=].
+device can authorize an [=administrator=] to administer the whole device.
+Some [=user agent=] [=implementations=] can also assign an [=administrator=] to
+manage a particular [=user agent=] based on the account that's logged into it.
 
 Sometimes the [=person=] using a device doesn't own the device or have
 [=administrator=] access to it (e.g. an employer providing a device to an
