Reorder the disclosure-to-administrators constraint.

--- a/index.html
+++ b/index.html
@@ -1616,11 +1616,11 @@ for example using the <a data-cite="IAD#">Institutional Analysis and Development
 
 <div class="practice" data-audiences="user-agents">
 <span class="practicelab" id="principle-owned-devices-disclose-surveillance">
-[=User agents=] must not help an [=administrator=] surveil the people
-using the devices or software they administer without those people's knowledge.
 [=User agents=] should not tell an [=administrator=] about user behavior except
 when that disclosure is necessary to enforce reasonable constraints on use of
 the device or software.
+Even when a disclosure is reasonable, [=user agents=] must ensure their users
+know about this surveillance.
 </span>
 </div>
 <div class="note">
