Fix a section link.

--- a/index.html
+++ b/index.html
@@ -1237,8 +1237,8 @@ use">ancillary uses</dfn>.
     APIs that filter, summarize, or time-shift information available from
     [=non-ancillary APIs=], like the [[[event-timing]]] and <a
     data-cite="intersection-observer#introduction">IntersectionObserver</a>. See
-    [[#information]] for restrictions on how existing non-ancillary APIs can be
-    used to justify new ancillary APIs.
+    [[[#information]]] for restrictions on how existing non-ancillary APIs can
+    be used to justify new ancillary APIs.
   </dd>
 
   <dt><dfn>Ancillary APIs that provide new information</dfn></dt>
