--- a/index.html
+++ b/index.html
@@ -1178,18 +1178,12 @@ according to their [=users=]' wishes.
 ## Data Minimization {#data-minimization}
 
 <div class="practice" data-audiences="websites user-agents"><span class="practicelab">[=Sites=], [=user agents=], and other [=actors=]
-should minimize the amount of [=personal data=] they transfer.</span></div>
+should restrict the [=personal data=] they transfer to what's necessary to achieve their users'
+goals and interests.</span></div>
 
 <div class="practice" data-audiences="api-designers"><span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
 to request to carry out their users' goals and provide granularity and user controls over <a>personal
 data</a> that is communicated to sites.</span></div>
-
-<div class="practice" data-audiences="user-agents">
-<span class="practicelab">In maintaining duties of [=duty of
-protection|protection=], [=duty of discretion|discretion=] and [=duty of loyalty|loyalty=], user agents should share data only when it either is needed
-to satisfy a user's immediate goals or aligns with the user's wishes and
-interests.</span>
-</div>
 
 Data minimization limits the risks of data being disclosed or misused. It also
 helps [=user agents=] and other [=actors=] more meaningfully explain the decisions their users need
