Take Wendy's suggestion to replace "cognitive budget"
Co-authored-by: Wendy Seltzer <wendy+gh@seltzer.org>

--- a/index.html
+++ b/index.html
@@ -2124,7 +2124,7 @@ known as the web page's <dfn data-dfn-for="page">first party</dfn>. When a [=per
 interacts with a part of a web page, the <dfn>first party</dfn> of that interaction
 is usually the web page's [=page/first party=].
 However, if a different [=actor=] makes the decisions about how that part of the
-page works, and a reasonable person with a realistic cognitive budget would realize
+page works, and a reasonable person with a realistic amount of time and energy would realize
 that this other [=actor=] has this control, this other
 [=actor=] is the [=first party=] for the interaction instead.
 
