Undo citation change for personal data.

--- a/index.html
+++ b/index.html
@@ -2140,7 +2140,7 @@ with.
 
 We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
 indirectly related to an identified or identifiable [=person=], such as by reference to an
-[=identifier=]. (This matches the [[[GDPR]]], the [[[OECD-Guidelines]]], and the [[[Convention-108]]].)
+[=identifier=] ([[GDPR]], [[OECD-Guidelines]], [[Convention-108]]).
 
 On the web, an <dfn>identifier</dfn> of some type is typically assigned for an
 [=identity=] as seen by a website, which makes it easier for an automated
