Service providers can work for other service providers.

--- a/index.html
+++ b/index.html
@@ -2206,16 +2206,16 @@ of data processing. Any [=actor=] that is not a [=service provider=] is a [=data
 
 A <dfn data-lt="data processor">service provider</dfn> or [=data processor=]:
 
-* [=processes=] data on behalf of a [=data controller=];
+* [=processes=] data on behalf of another [=actor=];
 * ensures that the data is only retained, accessed, and used as directed by that
-  [=data controller=] and solely for the list of explicitly-specified [=purposes=]
-  detailed by the directing [=data controller=];
+  [=actor=] and solely for the list of explicitly-specified [=purposes=]
+  detailed by the directing [=actor=];
 * may determine implementation details of the data processing in question but
   does not determine the [=purpose=] for which the data is being [=processed=]
   nor the overarching [=means=] through which the [=purpose=] is carried out;
 * has no independent right to use the data other than in a [=de-identified=] form (e.g., for
   monitoring service integrity, load balancing, capacity planning, or billing); and,
-* has a contract in place with the [=data controller=] which is consistent with the above limitations.
+* has a contract in place with the [=actor=] which is consistent with the above limitations.
 
 ## Recognition {#recognition}
 
