'move definition of automation asymetry and simplify integration with GOO'

--- a/index.html
+++ b/index.html
@@ -591,8 +591,8 @@ behaviours that would be more easily kept in check if the perpetrator had to be 
 the victim.
 
 When an [=actor=] can collect [=data=] about a [=person=] and process it automatically, and that
-[=person=] cannot automatically protect their [=data=] and prevent its processing ([=automation asymmetry=])
-this creates an imbalance of power that favors that [=actor=] and decreases the [=person=]'s agency.
+[=person=] has to take manual action to protect their [=data=] and prevent its processing, this <dfn>automation asymmetry</dfn>
+creates an imbalance of power that favors that [=actor=] and decreases the [=person=]'s agency.
 This document focuses on the impact that [=data=] [=processing=] can have on people, but it can also
 impact other [=actors=], such as companies or governments.
 
@@ -694,18 +694,15 @@ people notice this ongoing access and that lets them turn it off whenever they w
 In general, providing [=consent=] should be rare, intentional, and temporary.
 
 When an [=opt-out=] mechanism exists, it should preferably work with a
-<dfn>global opt-out</dfn> mechanism. The function of a [=global opt-out=] mechanism is to
-rectify the <dfn>automation asymmetry</dfn> whereby service providers can automate
-[=data processing=] but [=people=] have to take manual action to prevent it. A good example of a
-[=global opt-out=] mechanism is the <em>Global Privacy Control</em> [[?GPC]].
-
-Conceptually, a [=global opt-out=] mechanism is an automaton operating as part of the
-[=user agent=]. It is equivalent to a robot that would carry out a [=person=]'s instructions
-by pressing an [=opt-out=] button (or a similar expression of the [=person=]'s rights) with every
-interaction that the [=person=] has with a site. (For instance, the [=person=] may be objecting to [=processing=]
-based on legitimate interest, withdrawing [=consent=] to specific [=purposes=], or requesting that
-their data not be sold or shared.) The [=user=] is effectively delegating the expression
-of their [=opt-out=] to their [=user agent=], which helps rectify [=automation asymmetry=].
+<dfn>global opt-out</dfn> mechanism. Conceptually, a [=global opt-out=] mechanism is an 
+automaton operating as part of the [=user agent=]. It is equivalent to a robot that would carry 
+out a [=person=]'s instructions by pressing an [=opt-out=] button (or a similar expression of 
+the [=person=]'s rights) with every interaction that the [=person=] has with a site. (For 
+instance, the [=person=] may be objecting to [=processing=] based on legitimate interest, 
+withdrawing [=consent=] to specific [=purposes=], or requesting that their data not be sold or 
+shared.) The [=user=] is effectively delegating the expression of their [=opt-out=] to their 
+[=user agent=], which helps rectify [=automation asymmetry=]. A good example of a [=global opt-out=] 
+mechanism is the <em>Global Privacy Control</em> [[?GPC]].
 
 Under this model, a [=global opt-out=] signal should not be understood as a decision that a
 [=person=] made a while ago when they flipped a setting or chose to use a specific
