Clarify the web API minimization principle.

--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,8 @@ according to their [=users=]' wishes.
 should minimize the amount of [=personal data=] they transfer.</span></div>
 
 <div class="practice" data-audiences="api-designers"><span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
-to request to carry out their users' goals and provide granularity and user controls over <a>personal
+to request to carry out their users' goals.
+Web APIs should also provide granularity and user controls over <a>personal
 data</a> that is communicated to sites.</span></div>
 
 <div class="practice" data-audiences="user-agents">
