--- a/index.html
+++ b/index.html
@@ -1342,8 +1342,7 @@ information=].
 </span>
 </div>
 
-Some people may want to save processing time or bandwidth that's not necessary
-to achieve their immediate goals, or they might know something about their
+Some people might know something about their
 specific situation that makes the API designers' general decisions inappropriate
 for them. Because the information provided by [=ancillary APIs that provide new
 information=] isn't
