Avoid implying that ancillary APIs w/ new information should default to enabled.

--- a/index.html
+++ b/index.html
@@ -1340,8 +1340,9 @@ the person's permission.
 
 <div class="practice" data-audiences="user-agents">
 <span class="practicelab" id="principle-disabling-ancillary-apis-with-new-information">
-User agents should provide a way to disable [=ancillary APIs that provide new
-information=].
+User agents should provide a way to enable or disable [=ancillary APIs that
+provide new information=] and should set the default according to their users'
+needs.
 </span>
 </div>
 
