--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ guarantees driven by shared values that often exceed legal requirements for priv
 
 However, the overall goal of privacy on the Web is served best when technology and law complement
 each other. This document seeks to establish shared concepts as an aid to technical efforts to
-regulate privacy on the Web. It may also be useful in pursuing alignment with and between legal
+regulate privacy on the web. It may also be useful in pursuing alignment with and between legal
 regulatory regimes.
 
 Our goal for this document is not to cover all possible privacy issues, but rather to provide enough
