Before section 1 editorial+reference tweaking, fixes #297 (#379)
* 'editorial and references tweak'

* Update index.html

---------

Co-authored-by: Robin Berjon <robin.berjon@nytimes.com>

--- a/index.html
+++ b/index.html
@@ -401,6 +401,11 @@
           href: 'https://www.nytimes.com/2018/01/30/opinion/strava-privacy.html',
           publisher: 'The New York Times',
         },
+        'Standard-Bodies-Regulators': {
+          title: 'Technical Standards Bodies are Regulators',
+          authors: ['Mark Nottingham'],
+          href: 'https://www.mnot.net/blog/2023/11/01/regulators',
+        },
         'Strava-Reveal-Military': {
           title: 'Strava Fitness App Can Reveal Military Sites, Analysts Say',
           authors: ['Richard Pérez-Peña', 'Matthew Rosenberg'],
@@ -518,8 +523,8 @@ not be taken as an indication that privacy is always more important than other e
 this document doesn't address how to balance the different ethical web principles if they come into conflict.
 
 Privacy on the Web is primarily regulated by two forces: the architectural capabilities that the Web
-platform exposes (or does not), and laws in the various jurisdictions where the Web is used
-([[New-Chicago-School]]). These regulatory mechanisms are separate; a law in one country does not
+platform exposes (or does not expose), and laws in the various jurisdictions where the Web is used
+([[New-Chicago-School]], [[Standard-Bodies-Regulators]]). These regulatory mechanisms are separate; a law in one country does not
 (and should not) change the architecture of the whole Web, and likewise Web specifications cannot
 override any given law (although they can affect how easy it is to create and enforce law). The Web
 is not merely an implementation of a particular legal privacy regime; it has distinct features and
@@ -549,15 +554,15 @@ The primary audiences for this document are
  * browser developers,
  * authors of web specifications,
  * reviewers of web specifications, and
- * web developers
+ * web developers.
 
 Additional audiences include:
 
- * policy makers, and
+ * policy makers and
  * operators of privacy-related services.
 
 This document is intended to help its audiences address privacy concerns as early as possible in the life
-cycle of a new Web standard or feature, or in the development of Web products.  Beginning with privacy in mind will help avoid the need to
+cycle of a new Web standard or feature, or in the development of Web products. Beginning with privacy in mind will help avoid the need to
 add special cases later to address unforeseen but predictable issues or
 to build systems that turn out to be unacceptable to users.
 
