--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ behaviours that would be more easily kept in check if the perpetrator had to be 
 the victim.
 
 When an [=actor=] can collect [=data=] about a [=person=] and process it automatically, and that
-[=person=] has to take manual action to protect their [=data=] and prevent its processing, this <dfn>automation asymmetry</dfn>
+[=person=] has to take manual action to protect their [=data=] or control its processing, this <dfn>automation asymmetry</dfn>
 creates an imbalance of power that favors that [=actor=] and decreases the [=person=]'s agency.
 This document focuses on the impact that [=data=] [=processing=] can have on people, but it can also
 impact other [=actors=], such as companies or governments.
