--- a/index.html
+++ b/index.html
@@ -1178,8 +1178,8 @@ according to their [=users=]' wishes.
 ## Data Minimization {#data-minimization}
 
 <div class="practice" data-audiences="websites user-agents"><span class="practicelab">[=Sites=], [=user agents=], and other [=actors=]
-should restrict the [=personal data=] they transfer to what's necessary to achieve their users'
-goals and interests.</span></div>
+should restrict the [=personal data=] they transfer to what's either necessary to achieve their users'
+goals or aligns with their users' wishes and interests.</span></div>
 
 <div class="practice" data-audiences="api-designers"><span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
 to request to carry out their users' goals and provide granularity and user controls over <a>personal
